header search width overflow issue fixed

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
 .header {
     background-color: #003580;
     color: white;
     display: flex;
     justify-content: center;
     position: relative;
+    padding: 0 10px;
 }
 
 .headerContainer {
@@ -54,12 +61,12 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
     border-radius: 5px;
     position: absolute;
     bottom: -25px;
-    width: 100%;
+    width: calc(100% - 20px);
     max-width: 1024px;
-    flex-wrap: wrap;
 }
 
 .headerIcon {
